--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,12 +14,12 @@ pipeline {
     	}
 	stage('Build') {
             steps {
-                sh 'mvn clean install'
+                sh 'mvn clean package'
             }
         }
         stage('Test') {
             steps {
-                sh 'mvn test'
+                sh 'mava -cp target/my-app-1.0-SNAPSHOT.jar com.example.App'
             }
         }
 	}
